JSA-04/10/2018 Avance Cmplemento gas

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompraAutorizacion.cshtml
@@ -103,7 +103,7 @@
                                             @foreach (var m in Model.Productos)
                                             {
                                                 <tr>
-                                                    <td>@m.TipoProducto</td>
+                                                    <td>@m.IdTipoProducto</td>
                                                     <td>@m.Producto</td>
                                                     <td>@m.CantidadAComprar</td>
                                                     <td>@m.UnidadMedida</td>
