JOTM-05/10/2018-Pantallas para venta de estación y pipas
* Fragmento de formulario de venta de estación y pipa
* Agregar menú de venta pipa y estación

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_gas_lista.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_punto_venta_gas_lista.xml
@@ -41,7 +41,7 @@
     </android.support.v7.widget.RecyclerView>
 
     <ScrollView
-        android:id="@+id/scrollView3"
+        android:id="@+id/SVPuntoVentaGasListActivitiyConcepto"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -132,6 +132,19 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/BtnPuntoVentaGasListaActivityGasListaAgregar"
         tools:ignore="ButtonStyle,UnusedAttribute" />
+
+    <include
+        layout="@layout/formulario_venta_camioneta_y_pipa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/BtnPuntoVentaGasListaActivityGasListaAgregar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RVPuntoVentaGasActivityListaGas"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
 </ScrollView>
