--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Index.cshtml
@@ -149,7 +149,7 @@
                                                                         <span class="icon-name"></span>
                                                                     </a>
                                                                     <a ID="lbEdit" href="@Url.Action("EditarLocaciones", "Clientes", new { id = item.IdCliente })">
-                                                                        <i class="material-icons">edit</i>
+                                                                        <i class="material-icons">edit_location</i>
                                                                         <span class="icon-name"></span>
                                                                     </a>
                                                                     <a ID="lbBorrar" href="@Url.Action("BorrarClientes", "Clientes", new { id = item.IdCliente })">
